# 42_libft

./: .ft_strtrim.c.swp  .gitignore  CMakeLists.txt  Makefile  README.md  a.out  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_printf.h  ft_putchar_fd.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  libft.h  main.c  (+3 more)
inc/: libft.h
includes/: libft.h  libft.h.gch  libft_main.h  libft_main.h.gch
src/: Makefile  fr_strchr.c  fr_strnstr.c  fr_strrchr.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_back_bonus.c  ft_lstadd_front.c  ft_lstadd_front_bonus.c  ft_lstclear.c  ft_lstclear_bonus.c  ft_lstdelone.c  ft_lstdelone_bonus.c  ft_lstiter.c  ft_lstiter_bonus.c  ft_lstlast.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew.c  ft_lstnew_bonus.c  ft_lstsize.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  (+19 more)
src/ft_lst/: ft_lstadd_back.c  ft_lstadd_front_bonus.c  ft_lstclear.c  ft_lstclear_bonus.c  ft_lstdelone.c  ft_lstdelone_node.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c
src_main/: Makefile  abc.txt  del.c  errors.txt  ft_atoi_main.c  ft_bzero_main.c  ft_calloc_main.c  ft_del.c  ft_digit_main.c  ft_isalnum_main.c  ft_isalpha_main.c  ft_isascii_main.c  ft_isprint_main.c  ft_itoa_main.c  ft_lstadd_back_main.c  ft_lstadd_front_main.c  ft_lstdelone_main.c  ft_lstiter_main.c  ft_lstlast_main.c  ft_lstlast_main2.c  ft_lstmap_main.c  ft_lstnew_main.c  ft_lstsize_main.c  ft_memchr_main.c  ft_memcmp_main.c  ft_memcpy_main.c  ft_memmove_main.c  ft_memset_main.c  ft_putendl_fd_main.c  ft_putnbr_fd_main.c  ft_putstr_fd_main.c  ft_split_main.c  ft_strchr_main.c  ft_strdup_main.c  ft_striteri_main.c  ft_strjoin_main.c  ft_strlcat_main.c  ft_strlcpy_main.c  ft_strlen_main.c  ft_strmapi_main.c  (+8 more)
